Allow calc() as an intermediate common animation unit for background-position and background-size.  (Bug 520234)  r=bzbarsky  a=blocking2.0:beta7
UltraBlame original commit: 91d20b5e47d82ce1ae421276823ac3ef0731e2dc

--- a/layout/style/test/test_transitions_per_property.html
+++ b/layout/style/test/test_transitions_per_property.html
@@ -5449,6 +5449,27 @@ style
 .
 setProperty
 (
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
 prop
 "
 5
@@ -5480,12 +5501,29 @@ prop
 +
 "
 :
-non
+computed
+value
+before
+transition
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
 -
-interpolability
-of
-unit
-change
+moz
+-
+transition
+-
+property
+"
+prop
+"
 "
 )
 ;
@@ -5538,6 +5576,27 @@ style
 .
 setProperty
 (
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
 prop
 "
 3px
@@ -5570,12 +5629,29 @@ prop
 +
 "
 :
-non
+computed
+value
+before
+transition
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
 -
-interpolability
-of
-unit
-change
+moz
+-
+transition
+-
+property
+"
+prop
+"
 "
 )
 ;
@@ -5629,6 +5705,27 @@ style
 .
 setProperty
 (
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
 prop
 "
 5
@@ -5663,12 +5760,29 @@ prop
 +
 "
 :
-non
+computed
+value
+before
+transition
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
 -
-interpolability
-of
-unit
-change
+moz
+-
+transition
+-
+property
+"
+prop
+"
 "
 )
 ;
@@ -5714,6 +5828,145 @@ interpolation
 of
 radius
 "
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+8
+%
+12
+%
+"
+"
+"
+)
+;
+is
+(
+cs
+.
+getPropertyValue
+(
+prop
+)
+"
+16px
+24px
+"
+"
+radius
+-
+valued
+property
+"
++
+prop
++
+"
+:
+computed
+value
+before
+transition
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+prop
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+40px
+20px
+"
+"
+"
+)
+;
+is
+(
+cs
+.
+getPropertyValue
+(
+prop
+)
+"
+22px
+23px
+"
+"
+radius
+-
+valued
+property
+"
++
+prop
++
+"
+:
+interpolation
+of
+radius
+with
+mixed
+units
+"
+)
+;
+test_length_percent_calc_transition
+(
+prop
 )
 ;
 div
@@ -7893,6 +8146,27 @@ style
 .
 setProperty
 (
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
 prop
 "
 10px
@@ -7926,6 +8200,25 @@ computed
 value
 before
 transition
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+prop
+"
 "
 )
 ;
@@ -8089,6 +8382,8 @@ prop
 %
 20
 %
+5px
+10px
 "
 "
 "
@@ -8113,6 +8408,8 @@ prop
 %
 20
 %
+5px
+10px
 "
 "
 property
@@ -8147,6 +8444,8 @@ prop
 %
 40
 %
+25px
+50px
 "
 "
 "
@@ -8171,6 +8470,8 @@ prop
 %
 25
 %
+10px
+20px
 "
 "
 property
@@ -8187,6 +8488,143 @@ of
 lengths
 and
 percents
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+20
+%
+40
+%
+8px
+12px
+"
+"
+"
+)
+;
+is
+(
+cs
+.
+getPropertyValue
+(
+prop
+)
+"
+20
+%
+40
+%
+8px
+12px
+"
+"
+property
+"
++
+prop
++
+"
+:
+computed
+value
+before
+transition
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+12px
+20px
+40
+%
+16
+%
+"
+"
+"
+)
+;
+is
+(
+cs
+.
+getPropertyValue
+(
+prop
+)
+"
+-
+moz
+-
+calc
+(
+3px
++
+15
+%
+)
+-
+moz
+-
+calc
+(
+5px
++
+30
+%
+)
+-
+moz
+-
+calc
+(
+6px
++
+10
+%
+)
+-
+moz
+-
+calc
+(
+9px
++
+4
+%
+)
+"
+"
+property
+"
++
+prop
++
+"
+:
+interpolation
+that
+computes
+to
+calc
+(
+)
 "
 )
 ;
