Allow calc() as an intermediate common animation unit between lengths, percentages, and calc().  (Bug 520234)  r=bzbarsky  a=blocking2.0:beta7
UltraBlame original commit: 576e1b23a27b50442c4e0c8e18c2af6c7ee1b455

--- a/layout/style/test/test_transitions_per_property.html
+++ b/layout/style/test/test_transitions_per_property.html
@@ -697,6 +697,7 @@ bottom
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 clip
@@ -755,6 +756,7 @@ size
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 font
@@ -793,6 +795,7 @@ height
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 left
@@ -801,6 +804,7 @@ left
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 letter
@@ -820,6 +824,29 @@ color
 [
 test_color_transition
 ]
+/
+/
+NOTE
+:
+when
+calc
+(
+)
+is
+supported
+on
+'
+line
+-
+height
+'
+we
+should
+add
+/
+/
+test_length_percent_calc_transition
+.
 "
 line
 -
@@ -839,6 +866,7 @@ bottom
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 margin
@@ -849,6 +877,7 @@ left
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 margin
@@ -859,6 +888,7 @@ right
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 margin
@@ -869,6 +899,7 @@ top
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 marker
@@ -888,6 +919,7 @@ height
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 max
@@ -898,6 +930,7 @@ width
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 min
@@ -908,6 +941,7 @@ height
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 min
@@ -918,6 +952,7 @@ width
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 opacity
@@ -962,6 +997,7 @@ bottom
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 padding
@@ -972,6 +1008,7 @@ left
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 padding
@@ -982,6 +1019,7 @@ right
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 padding
@@ -992,6 +1030,7 @@ top
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 right
@@ -1000,6 +1039,7 @@ right
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 stop
@@ -1035,6 +1075,29 @@ dasharray
 [
 test_dasharray_transition
 ]
+/
+/
+NOTE
+:
+when
+calc
+(
+)
+is
+supported
+on
+'
+stroke
+-
+dashoffset
+'
+we
+should
+/
+/
+add
+test_length_percent_calc_transition
+.
 "
 stroke
 -
@@ -1063,6 +1126,29 @@ opacity
 [
 test_float_zeroToOne_transition
 ]
+/
+/
+NOTE
+:
+when
+calc
+(
+)
+is
+supported
+on
+'
+stroke
+-
+width
+'
+we
+should
+add
+/
+/
+test_length_percent_calc_transition
+.
 "
 stroke
 -
@@ -1082,6 +1168,7 @@ indent
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 text
@@ -1099,6 +1186,7 @@ top
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 vertical
@@ -1109,6 +1197,7 @@ align
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 visibility
@@ -1124,6 +1213,7 @@ width
 [
 test_length_transition
 test_percent_transition
+test_length_percent_calc_transition
 ]
 "
 word
@@ -2742,6 +2832,668 @@ percent
 computes
 to
 number
+"
+)
+;
+}
+function
+test_length_percent_calc_transition
+(
+prop
+)
+{
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+0
+%
+"
+"
+"
+)
+;
+var
+av
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+var
+a
+=
+any_unit_to_num
+(
+av
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+100
+%
+"
+"
+"
+)
+;
+var
+bv
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+var
+b
+=
+any_unit_to_num
+(
+bv
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+100px
+"
+"
+"
+)
+;
+var
+cv
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+var
+c
+=
+any_unit_to_num
+(
+cv
+)
+;
+isnot
+(
+b
+a
+"
+different
+percentages
+(
+"
++
+av
++
+"
+and
+"
++
+bv
++
+"
+)
+should
+be
+different
+for
+"
++
+prop
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+50
+%
+"
+"
+"
+)
+;
+var
+v1v
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+is
+(
+any_unit_to_num
+(
+v1v
+)
+*
+2
+a
++
+b
+"
+computed
+value
+before
+transition
+for
+"
++
+prop
++
+"
+:
+'
+"
++
+v1v
++
+"
+'
+should
+be
+halfway
+"
++
+"
+between
+'
+"
++
+av
++
+"
+'
++
+and
+'
+"
++
+bv
++
+"
+'
+.
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+prop
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+200px
+"
+"
+"
+)
+;
+var
+v2v
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+is
+(
+any_unit_to_num
+(
+v2v
+)
+*
+8
+5
+*
+a
++
+3
+*
+b
++
+4
+*
+c
+"
+interpolation
+between
+length
+and
+percent
+for
+"
++
+prop
++
+"
+:
+'
+"
++
+v2v
++
+"
+'
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+-
+moz
+-
+calc
+(
+100
+%
++
+200px
+)
+"
+"
+"
+)
+;
+v1v
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+is
+(
+any_unit_to_num
+(
+v1v
+)
+b
++
+2
+*
+c
+"
+computed
+value
+before
+transition
+for
+"
++
+prop
++
+"
+:
+'
+"
++
+v1v
++
+"
+'
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+prop
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+300
+%
+"
+"
+"
+)
+;
+v2v
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+is
+(
+any_unit_to_num
+(
+v2v
+)
+*
+2
+-
+1
+*
+a
++
+3
+*
+b
++
+3
+*
+c
+"
+interpolation
+between
+calc
+(
+)
+and
+percent
+for
+"
++
+prop
++
+"
+:
+'
+"
++
+v2v
++
+"
+'
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+"
+none
+"
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+400px
+"
+"
+"
+)
+;
+v1v
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+is
+(
+any_unit_to_num
+(
+v1v
+)
+4
+*
+c
+"
+computed
+value
+before
+transition
+for
+"
++
+prop
++
+"
+:
+'
+"
++
+v1v
++
+"
+'
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+"
+-
+moz
+-
+transition
+-
+property
+"
+prop
+"
+"
+)
+;
+div
+.
+style
+.
+setProperty
+(
+prop
+"
+-
+moz
+-
+calc
+(
+200
+%
++
+200px
+)
+"
+"
+"
+)
+;
+v2v
+=
+cs
+.
+getPropertyValue
+(
+prop
+)
+;
+is
+(
+any_unit_to_num
+(
+v2v
+)
+*
+2
+a
++
+b
++
+7
+*
+c
+"
+interpolation
+between
+length
+and
+calc
+(
+)
+for
+"
++
+prop
++
+"
+:
+'
+"
++
+v2v
++
+"
+'
 "
 )
 ;
