Bug 595591 - Visual Indicator is rendered incorrectly; r=dao a=johnath
UltraBlame original commit: 79f4a9df664b904e00a9dbfda0de8a261acc9139

--- a/browser/themes/gnomestripe/browser/tabview/tabview.css
+++ b/browser/themes/gnomestripe/browser/tabview/tabview.css
@@ -1765,6 +1765,13 @@ height
 ;
 background
 :
+-
+moz
+-
+image
+-
+rect
+(
 url
 (
 chrome
@@ -1780,6 +1787,11 @@ tabview
 tabview
 .
 png
+)
+0
+16
+16
+0
 )
 no
 -
