--- a/browser/themes/pinstripe/browser/tabview/tabview.css
+++ b/browser/themes/pinstripe/browser/tabview/tabview.css
@@ -1833,6 +1833,13 @@ height
 ;
 background
 :
+-
+moz
+-
+image
+-
+rect
+(
 url
 (
 chrome
@@ -1848,6 +1855,11 @@ tabview
 tabview
 .
 png
+)
+0
+20
+20
+0
 )
 no
 -
