Bug 594488 - move status bar UI to an optional toolbar button, r=gavin
UltraBlame original commit: 363c8bae0fb2912cb7353b5ea5fc9ed488925364

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -5289,6 +5289,10 @@ start
 :
 0
 ;
+height
+:
+16px
+;
 }
 #
 zoom
@@ -5396,6 +5400,112 @@ left
 radius
 :
 0
+;
+}
+#
+sync
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sync
+-
+16
+.
+png
+"
+)
+;
+}
+#
+sync
+-
+button
+[
+status
+=
+"
+active
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sync
+-
+16
+-
+throbber
+.
+png
+"
+)
+;
+}
+toolbar
+:
+not
+(
+[
+iconsize
+=
+"
+small
+"
+]
+)
+#
+sync
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+margin
+:
+1px
+;
+width
+:
+16px
+;
+height
+:
+16px
 ;
 }
 #
@@ -16780,22 +16890,5 @@ opacity
 0
 .
 5
-;
-}
-#
-sync
--
-status
--
-button
-.
-statusbarpanel
--
-iconic
-{
-padding
-:
-0
-5px
 ;
 }
