--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -5157,7 +5157,6 @@ toolbar
 "
 )
 ;
-}
 #
 zoom
 -
@@ -5193,6 +5192,112 @@ size
 toolbar
 "
 )
+;
+}
+#
+sync
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sync
+-
+16
+.
+png
+"
+)
+;
+}
+#
+sync
+-
+button
+[
+status
+=
+"
+active
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sync
+-
+16
+-
+throbber
+.
+png
+"
+)
+;
+}
+toolbar
+:
+not
+(
+[
+iconsize
+=
+"
+small
+"
+]
+)
+#
+sync
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+margin
+:
+1px
+;
+width
+:
+16px
+;
+height
+:
+16px
 ;
 }
 toolbar
