--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1139,6 +1139,38 @@ urlbar
 )
 ;
 }
+#
+urlbar
+-
+progress
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+progressmeter
+.
+xml
+#
+progressmeter
+"
+)
+;
+}
 .
 urlbar
 -
