--- a/layout/reftests/svg/image/img-dyn-1.html
+++ b/layout/reftests/svg/image/img-dyn-1.html
@@ -36,6 +36,27 @@ width
 200px
 "
 ;
+/
+/
+Use
+a
+setTimeout
+to
+delay
+snapshot
+to
+fix
+randomorange
+(
+bug
+596478
+)
+setTimeout
+(
+function
+(
+)
+{
 document
 .
 documentElement
@@ -45,6 +66,10 @@ removeAttribute
 "
 class
 "
+)
+;
+}
+0
 )
 ;
 }
