Backout of bug 574688 due to test failure, a=backout.
UltraBlame original commit: f86e1746ac0d9f59452b7a74ab39293eb82db496

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -663,6 +663,22 @@ appearance
 toolbox
 ;
 }
+statusbarpanel
+#
+statusbar
+-
+display
+{
+-
+moz
+-
+padding
+-
+start
+:
+0
+;
+}
 #
 appmenu
 -
@@ -10226,6 +10242,138 @@ start
 ;
 }
 #
+status
+-
+bar
+{
+border
+-
+top
+:
+none
+;
+}
+#
+security
+-
+button
+[
+level
+=
+"
+high
+"
+]
+#
+security
+-
+button
+[
+level
+=
+"
+low
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Secure
+.
+png
+"
+)
+;
+}
+#
+security
+-
+button
+[
+level
+=
+"
+broken
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Security
+-
+broken
+.
+png
+"
+)
+;
+}
+#
+page
+-
+report
+-
+button
+{
+width
+:
+20px
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Info
+.
+png
+"
+)
+;
+}
+#
 navigator
 -
 throbber
@@ -13372,6 +13520,19 @@ rect
 16px
 32px
 )
+;
+}
+#
+pageReportFirstTime
+statusbarpanel
+.
+statusbar
+-
+resizerpanel
+{
+visibility
+:
+collapse
 ;
 }
 #
