--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2428,6 +2428,10 @@ navigator
 -
 toolbox
 #
+status
+-
+bar
+#
 mainPopupSet
 {
 min
@@ -2437,6 +2441,76 @@ width
 1px
 ;
 }
+%
+ifdef
+MOZ_SERVICES_SYNC
+#
+sync
+-
+notifications
+-
+box
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+syncNotification
+.
+xml
+#
+notificationbox
+"
+)
+;
+}
+#
+sync
+-
+notifications
+-
+box
+notification
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+syncNotification
+.
+xml
+#
+notification
+"
+)
+;
+}
+%
+endif
 #
 identity
 -
