--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -10719,6 +10719,154 @@ Window
 ;
 }
 #
+status
+-
+bar
+{
+border
+-
+top
+:
+none
+;
+}
+statusbarpanel
+#
+statusbar
+-
+display
+{
+-
+moz
+-
+padding
+-
+start
+:
+0
+;
+}
+#
+security
+-
+button
+[
+level
+=
+"
+high
+"
+]
+#
+security
+-
+button
+[
+level
+=
+"
+low
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Secure
+.
+png
+"
+)
+;
+}
+#
+security
+-
+button
+[
+level
+=
+"
+broken
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Security
+-
+broken
+.
+png
+"
+)
+;
+}
+#
+page
+-
+report
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Info
+.
+png
+"
+)
+;
+width
+:
+20px
+;
+}
+#
 navigator
 -
 throbber
@@ -13288,6 +13436,19 @@ display
 moz
 -
 box
+;
+}
+#
+pageReportFirstTime
+statusbarpanel
+.
+statusbar
+-
+resizerpanel
+{
+visibility
+:
+collapse
 ;
 }
 #
