Bug 415958 - remove the background and border of the Search engine button on Linux. r=mventnor
UltraBlame original commit: 8757a527d7f5a2384914dc0142b7892fdf376b5d

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -8254,7 +8254,14 @@ end
 :
 1px
 solid
-ThreeDShadow
+rgba
+(
+0
+0
+0
+.
+1
+)
 ;
 }
 #
@@ -8281,7 +8288,14 @@ start
 :
 1px
 solid
-ThreeDShadow
+rgba
+(
+0
+0
+0
+.
+1
+)
 ;
 }
 #
