--- a/browser/themes/gnomestripe/browser/searchbar.css
+++ b/browser/themes/gnomestripe/browser/searchbar.css
@@ -177,15 +177,6 @@ margin
 :
 0
 ;
--
-moz
--
-margin
--
-end
-:
-2px
-;
 border
 :
 0
@@ -200,51 +191,10 @@ align
 center
 ;
 background
+-
+color
 :
-rgb
-(
-95
-%
-95
-%
-95
-%
-)
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-170
-170
-170
-.
-25
-)
-rgba
-(
-0
-0
-0
-.
-3
-)
-)
-;
--
-moz
--
-border
--
-end
-:
-1px
-solid
-ThreeDShadow
+transparent
 ;
 }
 .
@@ -288,60 +238,6 @@ border
 .
 searchbar
 -
-engine
--
-button
-:
-hover
-:
-active
-.
-searchbar
--
-engine
--
-button
-[
-open
-=
-"
-true
-"
-]
-{
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-0
-0
-0
-.
-4
-)
-rgba
-(
-0
-0
-0
-.
-1
-)
-)
-;
-}
-.
-searchbar
--
 dropmarker
 -
 image
@@ -364,15 +260,6 @@ width
 height
 :
 12px
-;
--
-moz
--
-margin
--
-start
-:
-1px
 ;
 }
 .
