Bug 596678 - Link hover in location bar should not appear instantly, without fade, if a link is previously moused over too quickly to show it. r=dao, a=gavin
UltraBlame original commit: 05d3282d1e7aec8f7695f6f86f5b17e6c7a455fd

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1209,6 +1209,75 @@ ltr
 .
 urlbar
 -
+textbox
+-
+container
+:
+not
+(
+[
+overlinkstate
+]
+)
+.
+urlbar
+-
+over
+-
+link
+-
+layer
+:
+not
+(
+[
+overlinkstate
+]
+)
+.
+urlbar
+-
+textbox
+-
+container
+-
+children
+:
+not
+(
+[
+overlinkstate
+]
+)
+.
+urlbar
+-
+over
+-
+link
+-
+box
+:
+not
+(
+[
+overlinkstate
+]
+)
+{
+-
+moz
+-
+transition
+-
+delay
+:
+100ms
+;
+}
+.
+urlbar
+-
 over
 -
 link
@@ -1254,15 +1323,6 @@ transition
 duration
 :
 150ms
-;
--
-moz
--
-transition
--
-delay
-:
-50ms
 ;
 -
 moz
@@ -1340,15 +1400,6 @@ transition
 duration
 :
 150ms
-;
--
-moz
--
-transition
--
-delay
-:
-50ms
 ;
 -
 moz
@@ -1417,42 +1468,6 @@ duration
 :
 150ms
 ;
--
-moz
--
-transition
--
-delay
-:
-50ms
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-cubic
--
-bezier
-(
-0
-.
-0
-0
-.
-6
-1
-.
-0
-1
-.
-0
-)
-;
 opacity
 :
 1
@@ -1508,26 +1523,6 @@ transition
 duration
 :
 150ms
-;
--
-moz
--
-transition
--
-delay
-:
-50ms
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-linear
 ;
 opacity
 :
