Backed out changeset 05d3282d1e7a due to orange. a=bustage
UltraBlame original commit: 81fe1dce9d057e4db4318573583a262544ea801b

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1209,75 +1209,6 @@ ltr
 .
 urlbar
 -
-textbox
--
-container
-:
-not
-(
-[
-overlinkstate
-]
-)
-.
-urlbar
--
-over
--
-link
--
-layer
-:
-not
-(
-[
-overlinkstate
-]
-)
-.
-urlbar
--
-textbox
--
-container
--
-children
-:
-not
-(
-[
-overlinkstate
-]
-)
-.
-urlbar
--
-over
--
-link
--
-box
-:
-not
-(
-[
-overlinkstate
-]
-)
-{
--
-moz
--
-transition
--
-delay
-:
-100ms
-;
-}
-.
-urlbar
--
 over
 -
 link
@@ -1323,6 +1254,15 @@ transition
 duration
 :
 150ms
+;
+-
+moz
+-
+transition
+-
+delay
+:
+50ms
 ;
 -
 moz
@@ -1406,6 +1346,15 @@ moz
 -
 transition
 -
+delay
+:
+50ms
+;
+-
+moz
+-
+transition
+-
 timing
 -
 function
@@ -1468,6 +1417,42 @@ duration
 :
 150ms
 ;
+-
+moz
+-
+transition
+-
+delay
+:
+50ms
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+cubic
+-
+bezier
+(
+0
+.
+0
+0
+.
+6
+1
+.
+0
+1
+.
+0
+)
+;
 opacity
 :
 1
@@ -1523,6 +1508,26 @@ transition
 duration
 :
 150ms
+;
+-
+moz
+-
+transition
+-
+delay
+:
+50ms
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+linear
 ;
 opacity
 :
