Bug 596478: randomorange in img-dyn-1.html - try delaying snapshot to see if it fixes this randomorange. a=tests-only
UltraBlame original commit: 582d07b9efd40a9e09a7c7ac26efc1483298f200

--- a/layout/reftests/svg/image/img-dyn-1.html
+++ b/layout/reftests/svg/image/img-dyn-1.html
@@ -45,12 +45,15 @@ to
 delay
 snapshot
 to
-fix
-randomorange
-(
+hopefully
+workaround
+/
+/
+random
+orange
 bug
 596478
-)
+.
 setTimeout
 (
 function
@@ -69,7 +72,7 @@ class
 )
 ;
 }
-0
+200
 )
 ;
 }
