Bug 544818 - Progress "Line" indicator for loading tabs r=gavin ui-r=limi a=blocking
UltraBlame original commit: 191d6bb957b0e9fdf7dd2d7d49c6fff9f240132a

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -385,6 +385,24 @@ width
 .
 tab
 -
+progress
+:
+not
+(
+[
+fadein
+]
+)
+:
+not
+(
+[
+pinned
+]
+)
+.
+tab
+-
 label
 :
 not
@@ -448,6 +466,10 @@ opacity
 important
 ;
 }
+.
+tab
+-
+progress
 .
 tab
 -
