--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -6685,6 +6685,10 @@ margin
 0
 ;
 }
+.
+tab
+-
+progress
 #
 urlbar
 -
@@ -6710,6 +6714,23 @@ margin
 1px
 ;
 }
+.
+tab
+-
+progress
+[
+busy
+]
+[
+stalled
+]
+[
+value
+=
+"
+0
+"
+]
 #
 urlbar
 -
@@ -6729,6 +6750,15 @@ value
 ]
 {
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+bar
 #
 urlbar
 -
@@ -6816,6 +6846,22 @@ rgb
 )
 ;
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+bar
+:
+-
+moz
+-
+window
+-
+inactive
 #
 urlbar
 -
@@ -6890,6 +6936,25 @@ rgb
 )
 ;
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+bar
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 #
 urlbar
 -
@@ -6937,6 +7002,32 @@ rgb
 )
 ;
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+bar
+:
+-
+moz
+-
+window
+-
+inactive
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 #
 urlbar
 -
@@ -6991,6 +7082,15 @@ rgb
 )
 ;
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+remainder
 #
 urlbar
 -
@@ -7075,6 +7175,67 @@ margin
 -
 end
 :
+2px
+;
+}
+.
+tab
+-
+progress
+-
+container
+{
+margin
+-
+top
+:
+-
+2px
+;
+}
+#
+tabbrowser
+-
+tabs
+[
+tabsontop
+=
+"
+false
+"
+]
+>
+.
+tabbrowser
+-
+tab
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+progress
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+end
+;
+margin
+-
+bottom
+:
+-
 2px
 ;
 }
@@ -11221,366 +11382,6 @@ item
 .
 png
 "
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-progress
-.
-png
-"
-)
-!
-important
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-16px
-16px
-0
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-stalled
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-progress
--
-pulsing
-.
-png
-"
-)
-!
-important
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-1
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-32px
-16px
-16px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-2
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-48px
-16px
-32px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-3
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-64px
-16px
-48px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-4
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-80px
-16px
-64px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-5
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-96px
-16px
-80px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-6
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-112px
-16px
-96px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-7
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-128px
-16px
-112px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-8
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-144px
-16px
-128px
 )
 ;
 }
