--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -272,3 +272,88 @@ index
 1
 ;
 }
+.
+tab
+-
+progress
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+progressmeter
+.
+xml
+#
+progressmeter
+"
+)
+!
+important
+;
+margin
+:
+0
+;
+min
+-
+width
+:
+0
+;
+}
+.
+tab
+-
+progress
+[
+selected
+]
+.
+tab
+-
+progress
+:
+not
+(
+[
+busy
+]
+)
+{
+display
+:
+none
+;
+}
+.
+tab
+-
+progress
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+start
+;
+}
