--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -7775,6 +7775,10 @@ margin
 0
 ;
 }
+.
+tab
+-
+progress
 #
 urlbar
 -
@@ -7816,6 +7820,23 @@ color
 transparent
 ;
 }
+.
+tab
+-
+progress
+[
+busy
+]
+[
+stalled
+]
+[
+value
+=
+"
+0
+"
+]
 #
 urlbar
 -
@@ -7835,6 +7856,15 @@ value
 ]
 {
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+bar
 #
 urlbar
 -
@@ -7937,6 +7967,25 @@ rgba
 )
 ;
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+bar
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 #
 urlbar
 -
@@ -8000,6 +8049,15 @@ rgba
 )
 ;
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+remainder
 #
 urlbar
 -
@@ -8059,6 +8117,25 @@ ThreeDLightShadow
 )
 ;
 }
+.
+tab
+-
+progress
+>
+.
+progress
+-
+remainder
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 #
 urlbar
 -
@@ -11319,366 +11396,6 @@ rgba
 )
 !
 important
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-progress
-.
-png
-"
-)
-!
-important
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-16px
-16px
-0
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-stalled
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-progress
--
-pulsing
-.
-png
-"
-)
-!
-important
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-1
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-32px
-16px
-16px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-2
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-48px
-16px
-32px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-3
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-64px
-16px
-48px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-4
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-80px
-16px
-64px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-5
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-96px
-16px
-80px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-6
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-112px
-16px
-96px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-7
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-128px
-16px
-112px
-)
-;
-}
-.
-tab
--
-icon
--
-image
-[
-busy
-]
-[
-progress
-=
-"
-8
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-144px
-16px
-128px
-)
 ;
 }
 .
