Bug 573840 - Web Console styling is broken with a Persona, r=dao, a=blocking2.0
UltraBlame original commit: 38c0f5de0401b90bbbd636e957c04c1d26c2c76a

--- a/toolkit/themes/pinstripe/global/webConsole.css
+++ b/toolkit/themes/pinstripe/global/webConsole.css
@@ -17,6 +17,12 @@ solid
 #
 aaa
 ;
+text
+-
+shadow
+:
+none
+;
 }
 .
 hud
@@ -673,6 +679,8 @@ border
 bottom
 :
 scopeBarSeparatorBorder
+!
+important
 ;
 padding
 :
@@ -696,6 +704,29 @@ box
 align
 :
 center
+;
+}
+.
+hud
+-
+console
+-
+filter
+-
+toolbar
+:
+-
+moz
+-
+lwtheme
+{
+border
+-
+top
+:
+scopeBarSeparatorBorder
+!
+important
 ;
 }
 .
