Bug 596678 - Link hover in location bar should not appear instantly, without fade, if a link is previously moused over too quickly to show it. r=dao, a=gavin
UltraBlame original commit: 7640eb022be6465490c307fc5614fbd0cde63907

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1231,6 +1231,75 @@ ltr
 .
 urlbar
 -
+textbox
+-
+container
+:
+not
+(
+[
+overlinkstate
+]
+)
+.
+urlbar
+-
+over
+-
+link
+-
+layer
+:
+not
+(
+[
+overlinkstate
+]
+)
+.
+urlbar
+-
+textbox
+-
+container
+-
+children
+:
+not
+(
+[
+overlinkstate
+]
+)
+.
+urlbar
+-
+over
+-
+link
+-
+box
+:
+not
+(
+[
+overlinkstate
+]
+)
+{
+-
+moz
+-
+transition
+-
+delay
+:
+100ms
+;
+}
+.
+urlbar
+-
 over
 -
 link
@@ -1276,15 +1345,6 @@ transition
 duration
 :
 150ms
-;
--
-moz
--
-transition
--
-delay
-:
-50ms
 ;
 -
 moz
@@ -1362,15 +1422,6 @@ transition
 duration
 :
 150ms
-;
--
-moz
--
-transition
--
-delay
-:
-50ms
 ;
 -
 moz
@@ -1439,42 +1490,6 @@ duration
 :
 150ms
 ;
--
-moz
--
-transition
--
-delay
-:
-50ms
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-cubic
--
-bezier
-(
-0
-.
-0
-0
-.
-6
-1
-.
-0
-1
-.
-0
-)
-;
 opacity
 :
 1
@@ -1530,26 +1545,6 @@ transition
 duration
 :
 150ms
-;
--
-moz
--
-transition
--
-delay
-:
-50ms
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-linear
 ;
 opacity
 :
