Bug 557087 (3/6) - Make layout aware of the new disabled state rule. r=dbaron a=sicking
UltraBlame original commit: a89e21dcff9a6766a54ee9a16042965b53f2fec6

--- a/layout/forms/resources/skin/button.css
+++ b/layout/forms/resources/skin/button.css
@@ -522,13 +522,8 @@ ThreeDDarkShadow
 ;
 }
 button
-[
+:
 disabled
-=
-"
-true
-"
-]
 input
 [
 type
@@ -537,13 +532,8 @@ type
 button
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 input
 [
 type
@@ -552,13 +542,8 @@ type
 submit
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 input
 [
 type
@@ -567,13 +552,8 @@ type
 reset
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 {
 -
 moz
@@ -641,13 +621,8 @@ GrayText
 ;
 }
 button
-[
+:
 disabled
-=
-"
-true
-"
-]
 >
 xul
 |
@@ -664,13 +639,8 @@ type
 button
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 >
 xul
 |
@@ -687,13 +657,8 @@ type
 submit
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 >
 xul
 |
@@ -710,13 +675,8 @@ type
 reset
 "
 ]
-[
-diasbled
-=
-"
-true
-"
-]
+:
+disabled
 >
 xul
 |
