--- a/layout/forms/resources/skin/checkbox.css
+++ b/layout/forms/resources/skin/checkbox.css
@@ -217,13 +217,8 @@ type
 checkbox
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 {
 background
 -
@@ -280,13 +275,8 @@ type
 checkbox
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 :
 checked
 {
