--- a/layout/forms/resources/skin/radio.css
+++ b/layout/forms/resources/skin/radio.css
@@ -53,13 +53,8 @@ type
 radio
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 {
 background
 -
@@ -324,13 +319,8 @@ type
 radio
 "
 ]
-[
+:
 disabled
-=
-"
-true
-"
-]
 :
 checked
 {
