--- a/layout/forms/resources/skin/select-dropdown.css
+++ b/layout/forms/resources/skin/select-dropdown.css
@@ -249,13 +249,8 @@ select
 -
 dropmarker
 select
-[
+:
 disabled
-=
-"
-true
-"
-]
 :
 hover
 :
@@ -536,13 +531,8 @@ important
 ;
 }
 select
-[
+:
 disabled
-=
-"
-true
-"
-]
 {
 background
 -
@@ -559,13 +549,8 @@ GrayText
 ;
 }
 select
-[
+:
 disabled
-=
-"
-true
-"
-]
 >
 xul
 |
