--- a/layout/reftests/css-disabled/select/select-fieldset-ref-disabled.html
+++ b/layout/reftests/css-disabled/select/select-fieldset-ref-disabled.html
@@ -7,26 +7,53 @@ html
 html
 >
 <
+link
+rel
+=
+'
+stylesheet
+'
+type
+=
+'
+text
+/
+css
+'
+href
+=
+'
+style
+.
+css
+'
+>
+<
 body
 >
 <
 fieldset
+class
+=
+"
+ref
+"
 >
 <
 fieldset
+class
+=
+"
+ref
+"
 >
 <
 select
 disabled
-style
+class
 =
 "
-background
--
-color
-:
-green
-;
+ref
 "
 >
 <
