--- a/layout/style/contenteditable.css
+++ b/layout/style/contenteditable.css
@@ -495,9 +495,8 @@ read
 write
 >
 input
-[
+:
 disabled
-]
 *
 |
 *
@@ -563,9 +562,8 @@ contenteditable
 true
 "
 ]
-[
+:
 disabled
-]
 input
 [
 contenteditable
