--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -1544,28 +1544,22 @@ important
 ;
 }
 input
-[
+:
 disabled
-]
 textarea
-[
+:
 disabled
-]
 option
-[
+:
 disabled
-]
 optgroup
-[
+:
 disabled
-]
 select
-[
+:
 disabled
-]
-[
+:
 disabled
-]
 {
 -
 moz
@@ -1601,13 +1595,11 @@ inherit
 ;
 }
 option
-[
+:
 disabled
-]
 optgroup
-[
+:
 disabled
-]
 {
 background
 -
@@ -1731,9 +1723,8 @@ type
 image
 "
 ]
-[
+:
 disabled
-]
 {
 cursor
 :
@@ -2049,9 +2040,8 @@ type
 radio
 "
 ]
-[
+:
 disabled
-]
 input
 [
 type
@@ -2060,9 +2050,8 @@ type
 radio
 "
 ]
-[
+:
 disabled
-]
 :
 active
 input
@@ -2073,9 +2062,8 @@ type
 radio
 "
 ]
-[
+:
 disabled
-]
 :
 hover
 input
@@ -2086,9 +2074,8 @@ type
 radio
 "
 ]
-[
+:
 disabled
-]
 :
 hover
 :
@@ -2101,9 +2088,8 @@ type
 checkbox
 "
 ]
-[
+:
 disabled
-]
 input
 [
 type
@@ -2112,9 +2098,8 @@ type
 checkbox
 "
 ]
-[
+:
 disabled
-]
 :
 active
 input
@@ -2125,9 +2110,8 @@ type
 checkbox
 "
 ]
-[
+:
 disabled
-]
 :
 hover
 input
@@ -2138,9 +2122,8 @@ type
 checkbox
 "
 ]
-[
+:
 disabled
-]
 :
 hover
 :
@@ -2738,15 +2721,13 @@ ButtonText
 ;
 }
 button
-[
+:
 disabled
-]
 :
 active
 button
-[
+:
 disabled
-]
 input
 [
 type
@@ -2755,9 +2736,8 @@ type
 reset
 "
 ]
-[
+:
 disabled
-]
 :
 active
 input
@@ -2768,9 +2748,8 @@ type
 reset
 "
 ]
-[
+:
 disabled
-]
 input
 [
 type
@@ -2779,9 +2758,8 @@ type
 button
 "
 ]
-[
+:
 disabled
-]
 :
 active
 input
@@ -2792,13 +2770,11 @@ type
 button
 "
 ]
-[
+:
 disabled
-]
 select
-[
+:
 disabled
-]
 >
 input
 [
@@ -2809,9 +2785,8 @@ button
 "
 ]
 select
-[
+:
 disabled
-]
 >
 input
 [
@@ -2831,9 +2806,8 @@ type
 submit
 "
 ]
-[
+:
 disabled
-]
 :
 active
 input
@@ -2844,9 +2818,8 @@ type
 submit
 "
 ]
-[
+:
 disabled
-]
 {
 padding
 :
