--- a/layout/forms/resources/content/xbl-forms.css
+++ b/layout/forms/resources/content/xbl-forms.css
@@ -1212,29 +1212,23 @@ inherit
 ;
 }
 input
-[
+:
 disabled
-]
 textarea
-[
+:
 disabled
-]
 option
-[
+:
 disabled
-]
 optgroup
-[
+:
 disabled
-]
 select
-[
+:
 disabled
-]
 select
-[
+:
 disabled
-]
 :
 :
 -
@@ -1339,9 +1333,8 @@ type
 image
 "
 ]
-[
+:
 disabled
-]
 {
 cursor
 :
