--- a/browser/base/content/aboutDialog.css
+++ b/browser/base/content/aboutDialog.css
@@ -220,14 +220,14 @@ top
 :
 5px
 ;
-}
-#
-released
-{
-color
+-
+moz
+-
+margin
+-
+start
 :
-#
-666666
+0
 ;
 }
 #
@@ -290,10 +290,6 @@ start
 0
 ;
 }
-.
-version
--
-label
 .
 trademark
 -
