Add test debugging for frequent intermittent orange (bug 482175). a=testonly
UltraBlame original commit: dca6eff8d8a0aa7bdebb6abc1a58198339d9c92f

--- a/toolkit/components/passwordmgr/test/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/test_prompt.html
@@ -1167,11 +1167,46 @@ logins
 "
 )
 ;
+ok
+(
+true
+"
+currently
+have
+"
++
+pwmgr
+.
+getAllLogins
+(
+)
+.
+length
++
+"
+logins
+.
+"
+)
+;
 pwmgr
 .
 removeLogin
 (
 login1
+)
+;
+ok
+(
+true
+"
+removing
+login
+2A
+.
+.
+.
+"
 )
 ;
 pwmgr
@@ -1181,11 +1216,37 @@ removeLogin
 login2A
 )
 ;
+ok
+(
+true
+"
+removing
+login
+2B
+.
+.
+.
+"
+)
+;
 pwmgr
 .
 removeLogin
 (
 login2B
+)
+;
+ok
+(
+true
+"
+removing
+login
+2C
+.
+.
+.
+"
 )
 ;
 pwmgr
@@ -1195,11 +1256,37 @@ removeLogin
 login2C
 )
 ;
+ok
+(
+true
+"
+removing
+login
+2D
+.
+.
+.
+"
+)
+;
 pwmgr
 .
 removeLogin
 (
 login2D
+)
+;
+ok
+(
+true
+"
+removing
+login
+2E
+.
+.
+.
+"
 )
 ;
 pwmgr
@@ -1209,11 +1296,37 @@ removeLogin
 login2E
 )
 ;
+ok
+(
+true
+"
+removing
+login
+3A
+.
+.
+.
+"
+)
+;
 pwmgr
 .
 removeLogin
 (
 login3A
+)
+;
+ok
+(
+true
+"
+removing
+login
+3B
+.
+.
+.
+"
 )
 ;
 pwmgr
@@ -1223,6 +1336,19 @@ removeLogin
 login3B
 )
 ;
+ok
+(
+true
+"
+removing
+login
+4
+.
+.
+.
+"
+)
+;
 pwmgr
 .
 removeLogin
@@ -1230,11 +1356,33 @@ removeLogin
 login4
 )
 ;
+ok
+(
+true
+"
+removing
+proxyLogin
+.
+.
+.
+"
+)
+;
 pwmgr
 .
 removeLogin
 (
 proxyLogin
+)
+;
+ok
+(
+true
+"
+whee
+done
+!
+"
 )
 ;
 SimpleTest
