Bug 594704 - add better notification setup for Fx4, r=gavin, a=blocking
UltraBlame original commit: 8a7efa16fd64c282fad112fe46a2dccc4dd1b4d3

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2399,8 +2399,6 @@ MOZ_SERVICES_SYNC
 sync
 -
 notifications
--
-box
 {
 -
 moz
@@ -2426,13 +2424,19 @@ notificationbox
 "
 )
 ;
+overflow
+-
+y
+:
+visible
+!
+important
+;
 }
 #
 sync
 -
 notifications
--
-box
 notification
 {
 -
