Bug 574688 - replace the status bar with the addon bar (r=mano, a=blocking-beta7)
UltraBlame original commit: eec9a82ad74029394c19a023700efb870f54bf17

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -10712,154 +10712,6 @@ Window
 ;
 }
 #
-status
--
-bar
-{
-border
--
-top
-:
-none
-;
-}
-statusbarpanel
-#
-statusbar
--
-display
-{
--
-moz
--
-padding
--
-start
-:
-0
-;
-}
-#
-security
--
-button
-[
-level
-=
-"
-high
-"
-]
-#
-security
--
-button
-[
-level
-=
-"
-low
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Secure
-.
-png
-"
-)
-;
-}
-#
-security
--
-button
-[
-level
-=
-"
-broken
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Security
--
-broken
-.
-png
-"
-)
-;
-}
-#
-page
--
-report
--
-button
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Info
-.
-png
-"
-)
-;
-width
-:
-20px
-;
-}
-#
 navigator
 -
 throbber
@@ -13072,19 +12924,6 @@ box
 ;
 }
 #
-pageReportFirstTime
-statusbarpanel
-.
-statusbar
--
-resizerpanel
-{
-visibility
-:
-collapse
-;
-}
-#
 download
 -
 monitor
@@ -13515,5 +13354,53 @@ opacity
 0
 .
 5
+;
+}
+#
+status
+-
+bar
+.
+statusbar
+-
+resizerpanel
+{
+display
+:
+none
+;
+}
+#
+status
+-
+bar
+{
+margin
+-
+top
+:
+.
+3em
+;
+}
+#
+status
+-
+bar
+>
+statusbarpanel
+{
+border
+-
+width
+:
+0
+;
+-
+moz
+-
+appearance
+:
+none
 ;
 }
