--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -663,22 +663,6 @@ appearance
 toolbox
 ;
 }
-statusbarpanel
-#
-statusbar
--
-display
-{
--
-moz
--
-padding
--
-start
-:
-0
-;
-}
 #
 appmenu
 -
@@ -10319,138 +10303,6 @@ start
 ;
 }
 #
-status
--
-bar
-{
-border
--
-top
-:
-none
-;
-}
-#
-security
--
-button
-[
-level
-=
-"
-high
-"
-]
-#
-security
--
-button
-[
-level
-=
-"
-low
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Secure
-.
-png
-"
-)
-;
-}
-#
-security
--
-button
-[
-level
-=
-"
-broken
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Security
--
-broken
-.
-png
-"
-)
-;
-}
-#
-page
--
-report
--
-button
-{
-width
-:
-20px
-;
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Info
-.
-png
-"
-)
-;
-}
-#
 navigator
 -
 throbber
@@ -13072,19 +12924,6 @@ end
 ;
 }
 #
-pageReportFirstTime
-statusbarpanel
-.
-statusbar
--
-resizerpanel
-{
-visibility
-:
-collapse
-;
-}
-#
 PlacesToolbarDropIndicator
 {
 list
@@ -15289,5 +15128,66 @@ opacity
 0
 .
 5
+;
+}
+#
+status
+-
+bar
+.
+statusbar
+-
+resizerpanel
+{
+display
+:
+none
+;
+}
+#
+status
+-
+bar
+{
+margin
+-
+top
+:
+.
+3em
+;
+border
+-
+width
+:
+0
+;
+-
+moz
+-
+appearance
+:
+none
+;
+}
+#
+status
+-
+bar
+>
+statusbarpanel
+{
+border
+-
+width
+:
+0
+;
+-
+moz
+-
+appearance
+:
+none
 ;
 }
