--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -6512,40 +6512,6 @@ top
 2px
 ;
 }
-statusbarpanel
-#
-statusbar
--
-display
-{
--
-moz
--
-padding
--
-start
-:
-0
-;
-}
-.
-statusbarpanel
--
-text
-{
-margin
--
-top
-:
-2px
-;
-margin
--
-bottom
-:
-0
-;
-}
 .
 urlbar
 -
@@ -10910,135 +10876,6 @@ text
 display
 :
 none
-;
-}
-#
-security
--
-button
-[
-level
-=
-"
-high
-"
-]
-#
-security
--
-button
-[
-level
-=
-"
-low
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Secure
--
-statusbar
-.
-png
-"
-)
-;
-}
-#
-security
--
-button
-[
-level
-=
-"
-broken
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Secure
--
-statusbar
--
-broken
-.
-png
-"
-)
-;
-}
-#
-page
--
-report
--
-button
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Popup
--
-blocked
-.
-png
-"
-)
-;
-padding
-:
-0px
-3px
-0px
-3px
 ;
 }
 #
@@ -16917,5 +16754,61 @@ opacity
 0
 .
 5
+;
+}
+#
+status
+-
+bar
+.
+statusbar
+-
+resizerpanel
+{
+display
+:
+none
+;
+}
+#
+status
+-
+bar
+{
+margin
+-
+top
+:
+0
+.
+3em
+;
+-
+moz
+-
+appearance
+:
+none
+;
+}
+#
+status
+-
+bar
+>
+statusbarpanel
+{
+border
+-
+width
+:
+0
+;
+-
+moz
+-
+appearance
+:
+none
 ;
 }
