--- a/toolkit/components/passwordmgr/test/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/test_prompt.html
@@ -3907,6 +3907,24 @@ the
 next
 test
 .
+function
+clearIt
+(
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 tmpLogin
 .
 init
@@ -3945,6 +3963,13 @@ pwmgr
 removeLogin
 (
 tmpLogin
+)
+;
+}
+setTimeout
+(
+clearIt
+0
 )
 ;
 /
@@ -4140,8 +4165,33 @@ remove
 (
 )
 ;
+function
+finishIt
+(
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 finishTest
 (
+)
+;
+}
+setTimeout
+(
+finishIt
+0
 )
 ;
 break
