--- a/browser/base/content/aboutDialog.css
+++ b/browser/base/content/aboutDialog.css
@@ -258,8 +258,6 @@ bottom
 0
 ;
 }
-#
-checkForUpdatesButton
 .
 text
 -
@@ -288,6 +286,126 @@ padding
 start
 :
 0
+;
+}
+#
+updateBox
+{
+margin
+-
+bottom
+:
+10px
+;
+}
+#
+updateButton
+#
+updateDeck
+>
+hbox
+>
+label
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+-
+moz
+-
+padding
+-
+start
+:
+0
+;
+}
+#
+updateDeck
+>
+hbox
+>
+label
+:
+not
+(
+[
+class
+=
+"
+text
+-
+link
+"
+]
+)
+{
+color
+:
+#
+909090
+;
+font
+-
+style
+:
+italic
+;
+}
+.
+update
+-
+throbber
+{
+width
+:
+16px
+;
+min
+-
+height
+:
+16px
+;
+-
+moz
+-
+margin
+-
+end
+:
+3px
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+loading_16
+.
+png
+"
+)
 ;
 }
 .
