Bug 598310 - Make "Work Offline" more discoverable in the app button menu for users who need it to recover from Firefox going offline automatically. r=gavin ui-r=faaborg a=blocking
UltraBlame original commit: 9549708d2e9008bf57413df8e3811b495f37d4f6

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1136,6 +1136,23 @@ tooltip
 ;
 }
 #
+appmenu_offlineModeRecovery
+:
+not
+(
+[
+checked
+=
+true
+]
+)
+{
+display
+:
+none
+;
+}
+#
 urlbar
 {
 -
