--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1195,17 +1195,17 @@ chrome
 :
 /
 /
-global
+browser
 /
 content
 /
-bindings
-/
-progressmeter
+urlbarBindings
 .
 xml
 #
-progressmeter
+urlbar
+-
+progress
 "
 )
 ;
