Bug 597353 - Ensure pinned tabs have the same height and alignment as normal tabs. r=gavin a=b
UltraBlame original commit: c510e150a244236e18c217e1187bd786e99660c4

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -7241,21 +7241,6 @@ end
 2px
 ;
 }
-.
-tab
--
-progress
--
-container
-{
-margin
--
-top
-:
--
-2px
-;
-}
 #
 tabbrowser
 -
@@ -7293,13 +7278,6 @@ box
 pack
 :
 end
-;
-margin
--
-bottom
-:
--
-2px
 ;
 }
 #
@@ -11254,6 +11232,16 @@ bold
 ;
 }
 .
+tab
+-
+stack
+{
+height
+:
+19px
+;
+}
+.
 tabbrowser
 -
 tab
@@ -11477,10 +11465,6 @@ text
 align
 :
 center
-;
-height
-:
-24px
 ;
 background
 -
