--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -228,9 +228,41 @@ label
 pinned
 ]
 {
-display
+width
 :
-none
+0
+;
+margin
+-
+left
+:
+0
+!
+important
+;
+margin
+-
+right
+:
+0
+!
+important
+;
+padding
+-
+left
+:
+0
+!
+important
+;
+padding
+-
+right
+:
+0
+!
+important
 ;
 }
 .
@@ -242,7 +274,7 @@ vertical
 -
 align
 :
-middle
+top
 ;
 }
 tabpanels
