Bug 592900 - Update the bookmarks menu from the nav toolbar to match changes in the Firefox menu. r=dolske a=blocking
UltraBlame original commit: 9a00cdcdb86936c0984a8ffd0df77d8dc8c381eb

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -3331,7 +3331,7 @@ rect
 #
 bookmarksToolbarFolderMenu
 #
-BMB_bookmarksToolbarFolderMenu
+BMB_bookmarksToolbar
 {
 list
 -
@@ -3360,7 +3360,7 @@ png
 ;
 }
 #
-unsortedBookmarksFolderMenu
+BMB_unsortedBookmarks
 {
 list
 -
