--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -2161,7 +2161,7 @@ height
 #
 bookmarksToolbarFolderMenu
 #
-BMB_bookmarksToolbarFolderMenu
+BMB_bookmarksToolbar
 {
 list
 -
@@ -2190,7 +2190,7 @@ png
 ;
 }
 #
-BMB_unsortedBookmarksFolderMenu
+BMB_unsortedBookmarks
 {
 list
 -
