--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1874,35 +1874,6 @@ png
 ;
 }
 #
-appmenu_unsortedBookmarks
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-places
-/
-unsortedBookmarks
-.
-png
-"
-)
-;
-}
-#
 appmenu_addons
 {
 list
@@ -1933,6 +1904,17 @@ png
 )
 ;
 }
+#
+BMB_subscribeToPage
+:
+not
+(
+[
+disabled
+]
+)
+#
+BMB_subscribeToPageMenu
 #
 appmenu_subscribeToPage
 :
@@ -1990,6 +1972,8 @@ rect
 )
 ;
 }
+#
+BMB_bookmarkThisPage
 #
 appmenu_bookmarkThisPage
 {
@@ -14411,7 +14395,9 @@ rect
 #
 bookmarksToolbarFolderMenu
 #
-BMB_bookmarksToolbarFolderMenu
+appmenu_bookmarksToolbar
+#
+BMB_bookmarksToolbar
 {
 list
 -
@@ -14449,7 +14435,9 @@ auto
 ;
 }
 #
-BMB_unsortedBookmarksFolderMenu
+appmenu_unsortedBookmarks
+#
+BMB_unsortedBookmarks
 {
 list
 -
