--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -4001,6 +4001,34 @@ color
 :
 transparent
 ;
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+progressmeter
+.
+xml
+#
+progressmeter
+"
+)
+!
+important
+;
 }
 .
 download
