Bug 820508 part 2 - UA stylesheet for <main>. r=bzbarsky.
UltraBlame original commit: f3dffbc276187d722ee4887ecc98f22fd54aeb78

--- a/layout/style/html.css
+++ b/layout/style/html.css
@@ -301,6 +301,11 @@ listing
 [
 dir
 ]
+main
+main
+[
+dir
+]
 marquee
 marquee
 [
@@ -508,6 +513,7 @@ form
 header
 hgroup
 html
+main
 nav
 section
 {
