Bug 822366 - Change the icon for Mixed Active Content to the triangle with exclamation point. r=dao
UltraBlame original commit: abba5495035465c99f0cdb2518124238e6415f15

--- a/browser/themes/pinstripe/browser.css
+++ b/browser/themes/pinstripe/browser.css
@@ -10955,6 +10955,53 @@ png
 )
 ;
 }
+.
+mixedActiveContent
+>
+#
+page
+-
+proxy
+-
+favicon
+[
+pageproxystate
+=
+"
+valid
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+identity
+-
+icons
+-
+https
+-
+mixed
+-
+active
+.
+png
+)
+;
+}
 #
 identity
 -
@@ -11145,6 +11192,54 @@ icons
 https
 -
 ev
+2x
+.
+png
+)
+;
+}
+.
+mixedActiveContent
+>
+#
+page
+-
+proxy
+-
+favicon
+[
+pageproxystate
+=
+"
+valid
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+identity
+-
+icons
+-
+https
+-
+mixed
+-
+active
 2x
 .
 png
