--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -11633,6 +11633,53 @@ png
 )
 ;
 }
+.
+mixedActiveContent
+>
+#
+page
+-
+proxy
+-
+favicon
+[
+pageproxystate
+=
+"
+valid
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+identity
+-
+icons
+-
+https
+-
+mixed
+-
+active
+.
+png
+)
+;
+}
 #
 identity
 -
