Bug 821859 - Use stylesheet for tab delay resizing instead of setting each tab.style. r=fryn
UltraBlame original commit: b1b6fb261d368957379045320a1bd8752456d899

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -467,6 +467,50 @@ out
 ;
 }
 .
+tabbrowser
+-
+tabs
+[
+dontresize
+]
+>
+.
+tabbrowser
+-
+tab
+[
+fadein
+]
+:
+not
+(
+[
+pinned
+]
+)
+{
+}
+.
+tabbrowser
+-
+tabs
+[
+dontanimate
+]
+>
+.
+tabbrowser
+-
+tab
+{
+transition
+:
+none
+!
+important
+;
+}
+.
 tab
 -
 throbber
