Bug 649654 - When tab bar underflow occurs and tab strip was scrolled to the beginning, resize tabs such that they can be closed in succession. r=fryn
UltraBlame original commit: 5294a43582ddec4e29110bfe30b94fd95e1bf09a

--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -304,6 +304,12 @@ tabs
 -
 spacer
 {
+min
+-
+width
+:
+0
+;
 pointer
 -
 events
@@ -336,9 +342,10 @@ spacer
 {
 transition
 :
+min
+-
 width
-.
-15s
+150ms
 ease
 -
 out
