Bug 822371 - Mixed Content Doorhanger UI. r=dao
UltraBlame original commit: a74d6901fd71bb53de89ea97a797d367a6f9c476

--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -18233,6 +18233,52 @@ icon
 popupid
 =
 "
+mixed
+-
+content
+-
+blocked
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+mixed
+-
+content
+-
+blocked
+-
+64
+.
+png
+)
+;
+}
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
 webRTC
 -
 sharingDevices
@@ -18832,6 +18878,45 @@ opacity
 1
 ;
 }
+}
+#
+mixed
+-
+content
+-
+blocked
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+mixed
+-
+content
+-
+blocked
+-
+16
+.
+png
+)
+;
 }
 #
 webRTC
