--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -10576,6 +10576,45 @@ opacity
 }
 }
 #
+mixed
+-
+content
+-
+blocked
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+mixed
+-
+content
+-
+blocked
+-
+16
+.
+png
+)
+;
+}
+#
 webRTC
 -
 shareDevices
