Bug 828987 - The Variables View should be keyboard accessible, r=past
UltraBlame original commit: d3156a1adca785ae3a28b97720c76bffa4499456

--- a/browser/devtools/debugger/debugger.css
+++ b/browser/devtools/debugger/debugger.css
@@ -109,8 +109,6 @@ y
 auto
 ;
 }
-#
-variables
 .
 details
 :
@@ -124,6 +122,23 @@ open
 display
 :
 none
+;
+}
+.
+scope
+.
+variable
+.
+property
+{
+-
+moz
+-
+user
+-
+focus
+:
+normal
 ;
 }
 .
@@ -147,27 +162,21 @@ header
 .
 title
 .
-property
-[
-non
--
-header
-]
->
-.
-title
-{
-display
-:
-none
-;
-}
-.
 variable
 [
 non
 -
 match
+]
+>
+.
+title
+.
+property
+[
+non
+-
+header
 ]
 >
 .
