--- a/browser/themes/pinstripe/devtools/debugger.css
+++ b/browser/themes/pinstripe/devtools/debugger.css
@@ -1236,6 +1236,23 @@ height
 }
 .
 scope
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+}
+.
+scope
 >
 .
 title
@@ -1379,6 +1396,51 @@ duration
 }
 .
 variable
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+border
+-
+radius
+:
+4px
+;
+}
+.
+variable
+>
+.
+title
+>
+.
+name
+{
+font
+-
+weight
+:
+600
+;
+}
+.
+variable
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1390,12 +1452,6 @@ color
 :
 #
 048
-;
-font
--
-weight
-:
-600
 ;
 }
 .
@@ -1499,6 +1555,35 @@ duration
 }
 .
 property
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+border
+-
+radius
+:
+4px
+;
+}
+.
+property
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1883,6 +1968,12 @@ variable
 [
 exception
 ]
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1894,6 +1985,12 @@ property
 [
 exception
 ]
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -2161,6 +2258,22 @@ margin
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 undefined
@@ -2171,6 +2284,22 @@ color
 bbb
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
@@ -2183,6 +2312,22 @@ color
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 boolean
@@ -2194,6 +2339,22 @@ color
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 number
@@ -2204,6 +2365,22 @@ color
 c40a16
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
@@ -2221,6 +2398,22 @@ color
 1c00cf
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
