--- a/browser/themes/gnomestripe/devtools/debugger.css
+++ b/browser/themes/gnomestripe/devtools/debugger.css
@@ -1184,6 +1184,23 @@ height
 }
 .
 scope
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+}
+.
+scope
 >
 .
 title
@@ -1327,6 +1344,51 @@ duration
 }
 .
 variable
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+border
+-
+radius
+:
+4px
+;
+}
+.
+variable
+>
+.
+title
+>
+.
+name
+{
+font
+-
+weight
+:
+600
+;
+}
+.
+variable
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1338,12 +1400,6 @@ color
 :
 #
 048
-;
-font
--
-weight
-:
-600
 ;
 }
 .
@@ -1447,6 +1503,35 @@ duration
 }
 .
 property
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+border
+-
+radius
+:
+4px
+;
+}
+.
+property
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1831,6 +1916,12 @@ variable
 [
 exception
 ]
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1842,6 +1933,12 @@ property
 [
 exception
 ]
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -2109,6 +2206,22 @@ margin
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 undefined
@@ -2119,6 +2232,22 @@ color
 bbb
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
@@ -2131,6 +2260,22 @@ color
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 boolean
@@ -2142,6 +2287,22 @@ color
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 number
@@ -2152,6 +2313,22 @@ color
 c40a16
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
@@ -2169,6 +2346,22 @@ color
 1c00cf
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
