--- a/browser/themes/winstripe/devtools/debugger.css
+++ b/browser/themes/winstripe/devtools/debugger.css
@@ -1230,6 +1230,23 @@ height
 }
 .
 scope
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+}
+.
+scope
 >
 .
 title
@@ -1373,6 +1390,51 @@ duration
 }
 .
 variable
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+border
+-
+radius
+:
+4px
+;
+}
+.
+variable
+>
+.
+title
+>
+.
+name
+{
+font
+-
+weight
+:
+600
+;
+}
+.
+variable
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1384,12 +1446,6 @@ color
 :
 #
 048
-;
-font
--
-weight
-:
-600
 ;
 }
 .
@@ -1493,6 +1549,35 @@ duration
 }
 .
 property
+:
+focus
+>
+.
+title
+{
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+border
+-
+radius
+:
+4px
+;
+}
+.
+property
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1877,6 +1962,12 @@ variable
 [
 exception
 ]
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -1888,6 +1979,12 @@ property
 [
 exception
 ]
+:
+not
+(
+:
+focus
+)
 >
 .
 title
@@ -2155,6 +2252,22 @@ margin
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 undefined
@@ -2165,6 +2278,22 @@ color
 bbb
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
@@ -2177,6 +2306,22 @@ color
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 boolean
@@ -2188,6 +2333,22 @@ color
 ;
 }
 .
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
+.
 token
 -
 number
@@ -2198,6 +2359,22 @@ color
 c40a16
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
@@ -2215,6 +2392,22 @@ color
 1c00cf
 ;
 }
+.
+variable
+-
+or
+-
+property
+:
+not
+(
+:
+focus
+)
+>
+.
+title
+>
 .
 token
 -
